[readme]: Add slim Docker image template